add initial files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="\images\Logo.png" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Studio</a>
+                </li>
+                <li>
+                    <a href="#">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#">Contacts</a>
+                </li>
+            </ul>
+        </nav>
 
     </header>
     <main>
