--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="\images\Logo.png" />
+                        <img src="\images\Logo.png" alt="logo"/>
                     </a>
                 </li>
                 <li>
@@ -25,10 +25,21 @@
                     <a href="#">Contacts</a>
                 </li>
             </ul>
+            <address>
+                <ul>
+                    <li>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
         </nav>
 
     </header>
     <main>
+        <h1>Effective Solutions for Your Business</h1>
 
     </main>
     <footer>
