--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <!--Navigation Bar with address-->
         <nav>
             <ul>
                 <li>
@@ -38,11 +39,70 @@
         </nav>
 
     </header>
+    <!--Main text-->
     <main>
         <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+
+        <!--Section Advantages-->
+        <section class="our advantages">
+            <ul>
+                <li>
+                <h2>Strategy</h2>
+                <p>Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution. </p>
+                </li>
+                <li>
+                    <h2>Punctuality</h2>
+                    <p>Bring the key message to the brand's audience 
+                        for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h2>Diligence</h2>
+                    <p>Research and confirm brands that present the 
+                        strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h2>Technologies</h2>
+                    <p>Design practice focused on 
+                        digital experiences. We bring forth a deep passion for problem-solving.
+                    </p>
+                </li>
+            </ul>
+
+        </section>
+        <!--Section our Team-->
+        <section class="our team">
+            <ul>
+                <li>
+                    <img class="team card1" src="\images\team-card1.png" alt="Mark Guerrero" />
+                    <h2>Mark Guerrero</h2>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img class="team card2" src="\images\team-card2.png" alt="Tom Ford" />
+                    <h2>Tom Ford</h2>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img class="team-card3" src="\images\team-card3.png" alt="Camila Garcia" />
+                    <h2>Camila Garcia</h2>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img class="team-card4" src="\images\team-card4.png" alt="Daniel Wilson" />
+                    <h2>Daniel Wilson</h2>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
 
     </main>
+    <!--Footer-->
     <footer>
+        <img src="\images\Logo.png" />
+        <p>Increase the flow of customers and sales for your
+             business with digital marketing & growth solutions.</p>
         
     </footer>
 
