add initial files

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img class="team-card3" src="\images\team-card3.png" alt="Camila Garcia" />
+                    <img class="team-card3" src=".\images\team-card3.png" alt="Camila Garcia" />
                     <h2>Camila Garcia</h2>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img class="team-card4" src="\images\team-card4.png" alt="Daniel Wilson" />
+                    <img class="team-card4" src=".gi\images\team-card4.png" alt="Daniel Wilson" />
                     <h2>Daniel Wilson</h2>
                     <p>UI Designer</p>
                 </li>
