add initial files

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img class="team card2" src="images\team-card2.png" alt="Tom Ford" />
+                    <img class="team card2" src="images/Logo.png" alt="Tom Ford" />
                     <h2>Tom Ford</h2>
                     <p>Frontend Developer</p>
                 </li>
