--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="\images\Logo.png" alt="logo"/>
+                        <img src="images/Logo.png" alt="logo"/>
                     </a>
                 </li>
                 <li>
@@ -75,22 +75,22 @@
         <section class="our team">
             <ul>
                 <li>
-                    <img class="team card1" src="\images\team-card1.png" alt="Mark Guerrero" />
+                    <img class="team card1" src="images/team-card1.png" alt="Mark Guerrero" />
                     <h2>Mark Guerrero</h2>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img class="team card2" src="images/Logo.png" alt="Tom Ford" />
+                    <img class="team card2" src="images/team-card2.png" alt="Tom Ford" />
                     <h2>Tom Ford</h2>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img class="team-card3" src="images\team-card3.png" alt="Camila Garcia" />
+                    <img class="team-card3" src="images/team-card4.png" alt="Camila Garcia" />
                     <h2>Camila Garcia</h2>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img class="team-card4" src="images\team-card4.png" alt="Daniel Wilson" />
+                    <img class="team-card4" src="images/team-card4.png" alt="Daniel Wilson" />
                     <h2>Daniel Wilson</h2>
                     <p>UI Designer</p>
                 </li>
@@ -100,7 +100,7 @@
     </main>
     <!--Footer-->
     <footer>
-        <img src="\images\Logo.png" />
+        <img src="images/Logo.png" />
         <p>Increase the flow of customers and sales for your
              business with digital marketing & growth solutions.</p>
         
