add initial files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="images/Logo.png" alt="logo"/>
+                        <img src="https://github.com/ihorkharatin/-goit-markup-hw-01/blob/main/images/Logo.png" alt="logo"/>
                     </a>
                 </li>
                 <li>
