--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -100,7 +100,7 @@
     </main>
     <!--Footer-->
     <footer>
-        <img src="images/Logo.png" />
+        <img src="https://github.com/ihorkharatin/-goit-markup-hw-01/blob/main/images/Logo.png" />
         <p>Increase the flow of customers and sales for your
              business with digital marketing & growth solutions.</p>
         
