--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="https://github.com/ihorkharatin/-goit-markup-hw-01/blob/main/images/Logo.png" alt="logo"/>
+                        <img src="images/Logo.png" alt="logo"/>
                     </a>
                 </li>
                 <li>
@@ -100,7 +100,7 @@
     </main>
     <!--Footer-->
     <footer>
-        <img src="https://github.com/ihorkharatin/-goit-markup-hw-01/blob/main/images/Logo.png" />
+        <img src="images/Logo.png" />
         <p>Increase the flow of customers and sales for your
              business with digital marketing & growth solutions.</p>
         
