--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="images/Logo.png" alt="logo"/>
+                        <img src="images/logo.png" alt="logo"/>
                     </a>
                 </li>
                 <li>
@@ -85,7 +85,7 @@
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img class="team-card3" src="images/team-card4.png" alt="Camila Garcia" />
+                    <img class="team-card3" src="images/team-card3.png" alt="Camila Garcia" />
                     <h2>Camila Garcia</h2>
                     <p>Marketing</p>
                 </li>
@@ -100,7 +100,7 @@
     </main>
     <!--Footer-->
     <footer>
-        <img src="images/Logo.png" />
+        <img src="images/logo.png" />
         <p>Increase the flow of customers and sales for your
              business with digital marketing & growth solutions.</p>
         
