--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </main>
     <!--Footer-->
     <footer>
-        <img src="images/logo.png" />
+        <img src="images/logo.png" alt="logo"/>
         <p>Increase the flow of customers and sales for your
              business with digital marketing & growth solutions.</p>
         
