--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
 
     </main>
     <!--Footer-->
-    <footer>
+        <footer>
+        <a href="#"></a>
         <img src="images/logo.png" alt="logo"/>
+        </a>
         <p>Increase the flow of customers and sales for your
              business with digital marketing & growth solutions.</p>
         
