--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </main>
     <!--Footer-->
         <footer>
-        <a href="#"></a>
+        <a href="#">
         <img src="images/logo.png" alt="logo"/>
         </a>
         <p>Increase the flow of customers and sales for your
