add initial files

--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
         <section class="our team">
             <ul>
                 <li>
-                    <img class="team card1" src="images/team-card1.png" alt="Mark Guerrero" />
+                    <img class="team card1" src="images/team-card1.png" alt="Mark Guerrero" width="264"/>
                     <h2>Mark Guerrero</h2>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img class="team card2" src="images/team-card2.png" alt="Tom Ford" />
+                    <img class="team card2" src="images/team-card2.png" alt="Tom Ford" width="264" />
                     <h2>Tom Ford</h2>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img class="team-card3" src="images/team-card3.png" alt="Camila Garcia" />
+                    <img class="team-card3" src="images/team-card3.png" alt="Camila Garcia" width="264" />
                     <h2>Camila Garcia</h2>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img class="team-card4" src="images/team-card4.png" alt="Daniel Wilson" />
+                    <img class="team-card4" src="images/team-card4.png" alt="Daniel Wilson" width="264" />
                     <h2>Daniel Wilson</h2>
                     <p>UI Designer</p>
                 </li>
